--- a/jee/.classpath
+++ b/jee/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry exported="true" kind="lib" path="C:/eclipse/jstl.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/eclipse/servlet-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/eclipse/standard.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/eclipse/ojdbc14.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
